saving 1day continous data

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +181,9 @@
    "source": [
     "nifty_daily = pd.read_csv(\"../Data/Nifty/nifty_1day.csv\")\n",
     "nifty_daily_continous = get_missing_data_dates(\"Nifty\",nifty_daily)\n",
+    "nifty_daily_continous.to_csv(\"../Data/Nifty/nifty_1day_continous.csv\",index=False)\n",
+    "\n",
+    "\n",
     "reliance_daily = pd.read_csv(\"../Data/Reliance/reliance_1day.csv\")\n",
     "reliance_daily_continous = get_missing_data_dates(\"Reliance\",reliance_daily)"
    ]
@@ -55533,7 +55536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
