--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
    "source": [
     "nifty_daily = pd.read_csv(\"../Data/Nifty/nifty_1day.csv\")\n",
     "nifty_daily_continous = get_missing_data_dates(\"Nifty\",nifty_daily)\n",
-    "nifty_daily_continous.to_csv(\"../Data/Nifty/nifty_1day_continous.csv\",index=False)\n",
+    "nifty_daily_continous.to_csv(\"../Data/Nifty/nifty_1day_continous.csv\",index=True)\n",
     "\n",
     "\n",
     "reliance_daily = pd.read_csv(\"../Data/Reliance/reliance_1day.csv\")\n",
