requirements.txt file added

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -9,74 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing c:\\users\\hp\\intrade_ai\\notebooks\\ta_lib-0.4.24-cp310-cp310-win_amd64.whl\n",
-      "Requirement already satisfied: numpy in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from TA-Lib==0.4.24) (1.23.4)\n",
-      "TA-Lib is already installed with the same version as the provided wheel. Use --force-reinstall to force an installation of the wheel.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.2.3; however, version 22.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
-   "source": [
-    "## Installing TA-Lib\n",
-    "!python -m pip install TA_Lib-0.4.24-cp310-cp310-win_amd64.whl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nbformat in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (5.7.0)"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.2.3; however, version 22.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from nbformat) (4.17.0)\n",
-      "Requirement already satisfied: fastjsonschema in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from nbformat) (2.16.2)\n",
-      "Requirement already satisfied: traitlets>=5.1 in c:\\users\\hp\\appdata\\roaming\\python\\python310\\site-packages (from nbformat) (5.5.0)\n",
-      "Requirement already satisfied: jupyter-core in c:\\users\\hp\\appdata\\roaming\\python\\python310\\site-packages (from nbformat) (5.0.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from jsonschema>=2.6->nbformat) (22.1.0)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\hp\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from jsonschema>=2.6->nbformat) (0.19.2)\n",
-      "Requirement already satisfied: platformdirs in c:\\users\\hp\\appdata\\roaming\\python\\python310\\site-packages (from jupyter-core->nbformat) (2.5.4)\n",
-      "Requirement already satisfied: pywin32>=1.0 in c:\\users\\hp\\appdata\\roaming\\python\\python310\\site-packages (from jupyter-core->nbformat) (305)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python -m pip install nbformat"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -166,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1675,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_manipulation\u001b[39;00m \u001b[39mimport\u001b[39;00m final_indicator\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.data_manipulation import final_indicator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2577,7 +2530,7 @@
        "2007-02-15  4127.6050  4010.274902  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
