--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -17,8 +17,10 @@
     "import numpy as np\n",
     "import plotly.express as px\n",
     "\n",
-    "from utils.data_cleaning import get_missing_data_dates\n",
-    "from utils.data_manipulation import get_indicators, pattern_recognition"
+    "import sys\n",
+    "sys.path.insert(1, '../utils')\n",
+    "from data_cleaning import get_missing_data_dates\n",
+    "from data_manipulation import get_indicators, pattern_recognition"
    ]
   },
   {
@@ -53717,7 +53719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
