appending relativ data paths

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,41 @@
     "import plotly.express as px\n",
     "\n",
     "import sys\n",
-    "sys.path.insert(1, '../utils')\n",
+    "sys.path.append('../utils')\n",
     "from data_cleaning import get_missing_data_dates\n",
     "from data_manipulation import get_indicators, pattern_recognition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\Users\\\\Amrit\\\\Intilt\\\\Intrade_ai\\\\Notebooks',\n",
+       " '../utils',\n",
+       " 'c:\\\\Users\\\\Amrit\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\python310.zip',\n",
+       " 'c:\\\\Users\\\\Amrit\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\DLLs',\n",
+       " 'c:\\\\Users\\\\Amrit\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib',\n",
+       " 'c:\\\\Users\\\\Amrit\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310',\n",
+       " '',\n",
+       " 'C:\\\\Users\\\\Amrit\\\\AppData\\\\Roaming\\\\Python\\\\Python310\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\Amrit\\\\AppData\\\\Roaming\\\\Python\\\\Python310\\\\site-packages\\\\win32',\n",
+       " 'C:\\\\Users\\\\Amrit\\\\AppData\\\\Roaming\\\\Python\\\\Python310\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'C:\\\\Users\\\\Amrit\\\\AppData\\\\Roaming\\\\Python\\\\Python310\\\\site-packages\\\\Pythonwin',\n",
+       " 'c:\\\\Users\\\\Amrit\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages',\n",
+       " '../utils']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
    ]
   },
   {
