--- a/src/data_cleaning/Nifty/nifty_analytics.ipynb
+++ b/src/data_cleaning/Nifty/nifty_analytics.ipynb
@@ -579,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 ('intrade')",
    "language": "python",
    "name": "python3"
   },
@@ -593,11 +593,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3b0325f2a11d07fc1a588262f8d5f6180ddbb98a5032f49a27580865bf852632"
+    "hash": "4f9efcd63b349acaed8a8c685f7ed60827aaf1034e0a547a53b021141a66914b"
    }
   }
  },
