created 1min continous function

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('../utils')\n",
-    "from data_cleaning import get_missing_data_dates, first_to_last_notna_data, count_above_5_days\n",
+    "from data_cleaning import get_missing_data_dates, get_continuous_1min_data\n",
     "from data_manipulation import get_indicators, pattern_recognition"
    ]
   },
@@ -35743,23 +35743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_data['datetime']=min_data['date']+\" \"+min_data['time']\n",
-    "min_data['datetime'] =  pd.to_datetime(min_data['datetime'], infer_datetime_format=True)\n",
-    "cols = ['datetime','open','high','low','close']\n",
-    "min_data = min_data[cols]\n",
-    "min_data = min_data.set_index(\"datetime\")\n",
-    "# min_data.index = min_data.index - pd.Timedelta(minutes=1)\n",
-    "\n",
-    "holidays['date'] = holidays['date'].astype('datetime64[ns]')"
+    "min_data = pd.read_csv('../Data/Nifty/nifty_1min.csv')\n",
+    "combined_1min = get_continuous_1min_data(min_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35876,7 +35870,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7887216 rows × 4 columns</p>\n",
+       "<p>1364059 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -35894,166 +35888,16 @@
        "2021-12-31 15:29:00  17359.8  17360.90  17351.10  17353.60\n",
        "2021-12-31 15:30:00  17353.4  17365.40  17353.10  17364.30\n",
        "\n",
-       "[7887216 rows x 4 columns]"
+       "[1364059 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# group in 1-minute chunks. \n",
-    "\n",
-    "t = min_data.groupby(pd.Grouper(freq='1Min')).agg({\"open\": \"first\", \n",
-    "                                             \"high\": \"max\", \n",
-    "                                             \"low\": \"min\", \n",
-    "                                             \"close\": \"last\"})\n",
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import date,time\n",
-    "## data between regular market hours\n",
-    "t_before = t[t.index.date < date(2011,1,3)]\n",
-    "t_after = t[t.index.date > date(2011,1,2)]\n",
-    "\n",
-    "t_before = t_before[t_before.index.time < time(15,31)]\n",
-    "t_before = t_before[t_before.index.time > time(9,54)]\n",
-    "# 2010-10-18\n",
-    "t_after = t_after[t_after.index.time < time(15,31)]\n",
-    "t_after = t_after[t_after.index.time > time(9,15)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## combined market hours data\n",
-    "combined_1min = pd.concat([t_before, t_after])\n",
-    "combined_1min = combined_1min.sort_index(ascending=True)\n",
-    "\n",
-    "## Data out of market hours\n",
-    "others = t[~t.isin(combined_1min)].dropna()\n",
-    "## removing extra values in others df with count on that day is less than 5\n",
-    "others = others[others.index.floor('D').isin(count_above_5_days(others).index)]\n",
-    "combined_1min = pd.concat([combined_1min, others], sort=False)\n",
-    "combined_1min = combined_1min.sort_index(ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2011262, 4)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_1min.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Data in weekends and weekdays\n",
-    "combined_1min_weekdays = combined_1min[combined_1min.index.dayofweek < 5]\n",
-    "combined_1min_weekends = combined_1min[combined_1min.index.dayofweek > 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_1min_weekends = combined_1min_weekends[combined_1min_weekends.index.floor('D').isin(count_above_5_days(combined_1min_weekends).index)]\n",
-    "combined_1min_weekends = first_to_last_notna_data(combined_1min_weekends)\n",
-    "combined_1min = pd.concat([combined_1min_weekdays,combined_1min_weekends])\n",
-    "combined_1min = combined_1min.sort_index(ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1442500, 4)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_1min.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# min_to_1day_weekends = combined_1min_weekends.groupby(pd.Grouper(freq='1D')).agg({\"open\": \"first\",\n",
-    "#                                              \"high\": \"max\", \n",
-    "#                                              \"low\": \"min\", \n",
-    "#                                              \"close\": \"last\"})\n",
-    "\n",
-    "# weekends_notna_dates = min_to_1day_weekends[min_to_1day_weekends.open.notna()]\n",
-    "# combined_1min_weekends = combined_1min_weekends[~combined_1min_weekends.index.floor('D').isin(weekends_notna_dates)]\n",
-    "# combined_1min_weekends = combined_1min_weekends[combined_1min_weekends['open'].notna()]\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Data in holidays\n",
-    "holidays_list = pd.to_datetime(holidays['date']).dt.date.unique().tolist()\n",
-    "combined_1min_nonholidays = combined_1min[~combined_1min.index.floor('D').isin(holidays_list)]\n",
-    "combined_1min_holidays = combined_1min[combined_1min.index.floor('D').isin(holidays_list)]\n",
-    "\n",
-    "combined_1min_holidays = combined_1min_holidays[combined_1min_holidays.index.floor('D').isin(count_above_5_days(combined_1min_holidays).index)]\n",
-    "combined_1min_holidays = first_to_last_notna_data(combined_1min_holidays)\n",
-    "\n",
-    "combined_1min = pd.concat([combined_1min_nonholidays,combined_1min_holidays])\n",
-    "combined_1min = combined_1min.sort_index(ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_1min.to_csv(\"data.csv\")"
+    "combined_1min"
    ]
   },
   {
