--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Amrit\\Intilt\\Intrade_ai\n"
+      "/Users/jeevan/Documents/Intrade/Intrade_ai\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18484,7 +18484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18497,7 +18497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18507,7 +18507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -18645,7 +18645,7 @@
        "[1364059 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18684,53 +18684,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nifty_time_adjustment(time_index):\n",
-    "    if time_index < datetime(2009,10,22,23,59,59):\n",
+    "    if time_index < datetime.datetime(2009,10,22,23,59,59):\n",
     "        return time_index\n",
-    "    elif datetime(2009,10,23,00,1,1) < time_index < datetime(2009,12,31,23,59,59):\n",
+    "    elif datetime.datetime(2009,10,23,00,1,1) < time_index < datetime.datetime(2009,12,31,23,59,59):\n",
     "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif time_index.date()==date(2010,1,4):\n",
+    "    elif time_index.date()==datetime.date(2010,1,4):\n",
     "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif datetime(2010,1,5,00,1,1) < time_index < datetime(2010,10,15,23,59,59):\n",
+    "    elif datetime.datetime(2010,1,5,00,1,1) < time_index < datetime.datetime(2010,10,15,23,59,59):\n",
     "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif time_index > datetime(2010,10,18,00,1,1):\n",
+    "    elif time_index > datetime.datetime(2010,10,18,00,1,1):\n",
     "        return time_index - pd.Timedelta(minutes=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2007-01-02 09:55:00\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [44], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Making time adjustments as per the inferences/conclusion mentioned above.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m combined_1min[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m combined_1min\u001b[39m.\u001b[39mindex\n\u001b[1;32m----> 3\u001b[0m combined_1min[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m combined_1min[\u001b[39m'\u001b[39;49m\u001b[39mdate\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(\u001b[39mlambda\u001b[39;49;00m x:nifty_time_adjustment(x))\n\u001b[0;32m      4\u001b[0m combined_1min\u001b[39m.\u001b[39mset_index(\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\Amrit\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\series.py:4771\u001b[0m, in \u001b[0;36mSeries.apply\u001b[1;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[0;32m   4661\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[0;32m   4662\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   4663\u001b[0m     func: AggFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4666\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[0;32m   4667\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[0;32m   4668\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4669\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[0;32m   4670\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4769\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[0;32m   4770\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4771\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
-      "File \u001b[1;32mc:\\Users\\Amrit\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\apply.py:1105\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1102\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[0;32m   1104\u001b[0m \u001b[39m# self.f is Callable\u001b[39;00m\n\u001b[1;32m-> 1105\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
-      "File \u001b[1;32mc:\\Users\\Amrit\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\apply.py:1156\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1154\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1155\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[1;32m-> 1156\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[0;32m   1157\u001b[0m             values,\n\u001b[0;32m   1158\u001b[0m             f,\n\u001b[0;32m   1159\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[0;32m   1160\u001b[0m         )\n\u001b[0;32m   1162\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[0;32m   1163\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[0;32m   1164\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[0;32m   1165\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
-      "File \u001b[1;32mc:\\Users\\Amrit\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\lib.pyx:2918\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
-      "Cell \u001b[1;32mIn [44], line 3\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Making time adjustments as per the inferences/conclusion mentioned above.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m combined_1min[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m combined_1min\u001b[39m.\u001b[39mindex\n\u001b[1;32m----> 3\u001b[0m combined_1min[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m combined_1min[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x:nifty_time_adjustment(x))\n\u001b[0;32m      4\u001b[0m combined_1min\u001b[39m.\u001b[39mset_index(\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "Cell \u001b[1;32mIn [43], line 4\u001b[0m, in \u001b[0;36mnifty_time_adjustment\u001b[1;34m(time_index)\u001b[0m\n\u001b[0;32m      2\u001b[0m time_index \u001b[39m=\u001b[39m time_index\u001b[39m.\u001b[39mto_pydatetime()\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(time_index)\n\u001b[1;32m----> 4\u001b[0m \u001b[39mif\u001b[39;00m time_index \u001b[39m<\u001b[39m datetime(\u001b[39m2009\u001b[39;49m,\u001b[39m10\u001b[39;49m,\u001b[39m22\u001b[39;49m,\u001b[39m23\u001b[39;49m,\u001b[39m59\u001b[39;49m,\u001b[39m59\u001b[39;49m):\n\u001b[0;32m      5\u001b[0m     \u001b[39mreturn\u001b[39;00m time_index\n\u001b[0;32m      6\u001b[0m \u001b[39melif\u001b[39;00m datetime(\u001b[39m2009\u001b[39m,\u001b[39m10\u001b[39m,\u001b[39m23\u001b[39m,\u001b[39m00\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m) \u001b[39m<\u001b[39m time_index \u001b[39m<\u001b[39m datetime(\u001b[39m2009\u001b[39m,\u001b[39m12\u001b[39m,\u001b[39m31\u001b[39m,\u001b[39m23\u001b[39m,\u001b[39m59\u001b[39m,\u001b[39m59\u001b[39m):\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Making time adjustments as per the inferences/conclusion mentioned above.\n",
     "combined_1min['date']= combined_1min.index\n",
