os path issue resolved in ipynb

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "import os\n",
     "os.chdir(\"../\")\n",
-    "print(os.getcwd())\n"
-
+    "print(os.getcwd())"
    ]
   },
   {
@@ -31,14 +30,11 @@
     "import datetime\n",
     "\n",
     "from utils.data_cleaning import get_missing_data_dates, get_continuous_1min_data\n",
-    "os.chdir(\"../\")\n",
-
     "from utils.data_manipulation import get_indicators, pattern_recognition"
    ]
   },
   {
    "cell_type": "code",
-
    "execution_count": 3,
    "metadata": {},
    "outputs": [
