capture missing dates in 1min and save

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Amrit\\Intilt\\Intrade_ai\n"
+      "/Users/jeevan/Documents/Intrade/Intrade_ai\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18484,7 +18484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18497,161 +18497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "min_data = pd.read_csv('Data/Nifty/nifty_1min.csv')\n",
-    "combined_1min = get_continuous_1min_data(min_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>datetime</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2007-01-02 09:55:00</th>\n",
-       "      <td>3978.2</td>\n",
-       "      <td>3978.40</td>\n",
-       "      <td>3966.40</td>\n",
-       "      <td>3978.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007-01-02 09:56:00</th>\n",
-       "      <td>3978.9</td>\n",
-       "      <td>3980.70</td>\n",
-       "      <td>3978.90</td>\n",
-       "      <td>3980.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007-01-02 09:57:00</th>\n",
-       "      <td>3980.3</td>\n",
-       "      <td>3981.30</td>\n",
-       "      <td>3979.15</td>\n",
-       "      <td>3979.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007-01-02 09:58:00</th>\n",
-       "      <td>3979.8</td>\n",
-       "      <td>3980.15</td>\n",
-       "      <td>3979.25</td>\n",
-       "      <td>3980.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007-01-02 09:59:00</th>\n",
-       "      <td>3979.5</td>\n",
-       "      <td>3979.60</td>\n",
-       "      <td>3979.30</td>\n",
-       "      <td>3979.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31 15:26:00</th>\n",
-       "      <td>17357.9</td>\n",
-       "      <td>17358.50</td>\n",
-       "      <td>17353.80</td>\n",
-       "      <td>17356.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31 15:27:00</th>\n",
-       "      <td>17356.1</td>\n",
-       "      <td>17359.70</td>\n",
-       "      <td>17355.60</td>\n",
-       "      <td>17359.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31 15:28:00</th>\n",
-       "      <td>17358.8</td>\n",
-       "      <td>17360.50</td>\n",
-       "      <td>17356.20</td>\n",
-       "      <td>17359.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31 15:29:00</th>\n",
-       "      <td>17359.8</td>\n",
-       "      <td>17360.90</td>\n",
-       "      <td>17351.10</td>\n",
-       "      <td>17353.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31 15:30:00</th>\n",
-       "      <td>17353.4</td>\n",
-       "      <td>17365.40</td>\n",
-       "      <td>17353.10</td>\n",
-       "      <td>17364.30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1364059 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        open      high       low     close\n",
-       "datetime                                                  \n",
-       "2007-01-02 09:55:00   3978.2   3978.40   3966.40   3978.40\n",
-       "2007-01-02 09:56:00   3978.9   3980.70   3978.90   3980.40\n",
-       "2007-01-02 09:57:00   3980.3   3981.30   3979.15   3979.15\n",
-       "2007-01-02 09:58:00   3979.8   3980.15   3979.25   3980.15\n",
-       "2007-01-02 09:59:00   3979.5   3979.60   3979.30   3979.30\n",
-       "...                      ...       ...       ...       ...\n",
-       "2021-12-31 15:26:00  17357.9  17358.50  17353.80  17356.30\n",
-       "2021-12-31 15:27:00  17356.1  17359.70  17355.60  17359.30\n",
-       "2021-12-31 15:28:00  17358.8  17360.50  17356.20  17359.80\n",
-       "2021-12-31 15:29:00  17359.8  17360.90  17351.10  17353.60\n",
-       "2021-12-31 15:30:00  17353.4  17365.40  17353.10  17364.30\n",
-       "\n",
-       "[1364059 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_1min"
+    "combined_1min= get_continuous_1min_data(\"Nifty\",min_data)\n",
+    "# combined_1min.to_csv(\"1min.csv\")"
    ]
   },
   {
@@ -18659,11 +18511,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## remove lunch break 11:45 to 12:30 for few days\n",
     "## remove pre-open data\n",
     "\n",
-    "## capture and delete data with null on dates - missing days data"
+    "## capture and delete data with null on dates - missing days data - almost done need to save to dict - completed"
    ]
   },
   {
@@ -19978,7 +19837,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.10.8 ('intrade')",
    "language": "python",
    "name": "python3"
   },
@@ -19992,12 +19851,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a4eb17cfc315e1086e64ababfe7809be8f1c25c6da3a4a8e75049620772378dd"
+    "hash": "4f9efcd63b349acaed8a8c685f7ed60827aaf1034e0a547a53b021141a66914b"
    }
   }
  },
