removed trading halted times and lunch times

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -18508,10 +18508,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "combined_1min.to_csv(\"1min.csv\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -18519,10 +18521,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## remove lunch break 11:45 to 12:30 for few days\n",
     "## remove pre-open data\n",
     "\n",
-    "## capture and delete data with null on dates - missing days data - almost done need to save to dict - completed"
+    "## Need to obtain data for 2021-02-24 where trading halted from 11:40 to 3:30 and resumed from 3:45 to 5PM"
    ]
   },
   {
