--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Nifty Daily data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18521,7 +18514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Need to obtain data for 2021-02-24 where trading halted from 11:40 to 3:30 and resumed from 3:45 to 5PM"
+    "## Need to obtain data for 2021-02-24 where trading halted from 11:40 to 3:30 and resumed from 3:45 to 5PM\n",
+    "## Need to add data for 2014-10-23 (Muhurat trading)"
    ]
   },
   {
@@ -18538,73 +18532,6 @@
     "From 2010-01-05 (incl) -> Trading from 09:01\n",
     "\n",
     "2010-10-18 -> preopen at 09:08 and trading started from 09:16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nifty_time_adjustment(time_index):\n",
-    "    if time_index < datetime.datetime(2009,10,22,23,59,59):\n",
-    "        return time_index\n",
-    "    elif datetime.datetime(2009,10,23,00,1,1) < time_index < datetime.datetime(2009,12,31,23,59,59):\n",
-    "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif time_index.date()==datetime.date(2010,1,4):\n",
-    "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif datetime.datetime(2010,1,5,00,1,1) < time_index < datetime.datetime(2010,10,15,23,59,59):\n",
-    "        return time_index - pd.Timedelta(minutes=1)\n",
-    "    elif time_index > datetime.datetime(2010,10,18,00,1,1):\n",
-    "        return time_index - pd.Timedelta(minutes=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Making time adjustments as per the inferences/conclusion mentioned above.\n",
-    "combined_1min['date']= combined_1min.index\n",
-    "combined_1min['date'] = combined_1min['date'].apply(lambda x:nifty_time_adjustment(x))\n",
-    "combined_1min.set_index('date', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Remove data from 9:00 to 9:14 (pre-opening) from 2010-10-17\n",
-    "combined_1min = combined_1min.drop(combined_1min[(datetime.time(8,59,0)<combined_1min.index.time) & (combined_1min.index.time<datetime.time(9,15,0)) & (combined_1min.index.date>datetime.date(2010,10,17))].index)\n",
-    "## Remove data with NaN at 15:30\n",
-    "combined_1min = combined_1min.drop(combined_1min[(combined_1min.index.time==datetime.time(15,30,00)) & (combined_1min.open.isnull())].index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "open     22081\n",
-       "high     22081\n",
-       "low      22081\n",
-       "close    22081\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_1min.isnull().sum()"
    ]
   },
   {
