--- a/Notebooks/pyfolio/pyfolio_min_data.ipynb
+++ b/Notebooks/pyfolio/pyfolio_min_data.ipynb
@@ -23,7 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('../../Data/Nifty/nifty_1day_continous.csv')\n",
+    "data = data.set_index('datetime')\n",
+    "data.insert(4, \"adj close\", data['close'], True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('testing.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3897,7 +3917,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='80145114-8a3f-4ed9-9085-d88a7fa64b97'></div>"
+       "<div id='d16b3b6d-b8c0-4275-85d8-8af3f83e998c'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3919,7 +3939,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='44209bd3-f6cd-4b0d-83bc-fa65b5362553'></div>"
+       "<div id='a282983a-143e-4c43-b8af-d4ed473761d1'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3941,7 +3961,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='75830f95-cb13-4bb9-b0a2-305bdc1d87f3'></div>"
+       "<div id='05e2f31a-a173-4030-86f2-77ae27a79ee9'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3963,7 +3983,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='0b1ddb6d-9e5f-4c51-add0-3490c87518f5'></div>"
+       "<div id='d4333100-9c7e-47d6-b2dc-3dc520f624bf'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3985,7 +4005,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='b8d03beb-b5e3-498c-8fc3-350c5e56edbe'></div>"
+       "<div id='6acc849e-d358-42b3-878c-032e07ffa105'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4007,7 +4027,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='7141b9b7-3173-41f8-aa70-4a5493070823'></div>"
+       "<div id='6a1ae50e-5232-473f-8be1-5da2c375398d'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4029,7 +4049,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='28364d31-8923-47f0-92bf-6ea1fe41aafb'></div>"
+       "<div id='c7b42d3c-e32a-4926-9170-325e4585a531'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4051,7 +4071,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='3e695682-0f90-42dd-a0a3-3583a0adf00d'></div>"
+       "<div id='dc843010-2c42-4b94-b092-5a5d75985895'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4073,7 +4093,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='0d632ee4-2735-42a0-be9e-a2e0a7ab53dc'></div>"
+       "<div id='cdc07852-690d-498d-9945-495eb5b5b835'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4095,7 +4115,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='edb6563c-8ede-4dda-b45f-55c4103c8c0e'></div>"
+       "<div id='69f59fe3-fb53-4934-bef0-6132ef9bfaab'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4125,7 +4145,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='5b1ea0cd-6d7d-473d-b595-5a27bdcf234c'></div>"
+       "<div id='e1a0ed3f-f671-47d7-84a4-5a2510b5302c'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4147,7 +4167,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='276341f4-2eb9-4b53-9b90-fff53127e668'></div>"
+       "<div id='93d215ca-971c-4ef1-946c-5ec03d0ecad0'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4169,7 +4189,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='dfe1524c-7b23-4a2f-994f-1ff4ac2ba275'></div>"
+       "<div id='938339f0-863b-4134-9d04-263604dba438'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -4304,7 +4324,7 @@
     "\n",
     "    # Create a Data Feed\n",
     "    data = bt.feeds.YahooFinanceCSVData(\n",
-    "        dataname='../testing.csv',\n",
+    "        dataname='testing.csv',\n",
     "        # Do not pass values before this date\n",
     "        fromdate=datetime.datetime(2011, 1, 3),\n",
     "        # Do not pass values before this date\n",
@@ -4365,7 +4385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.1 (tags/v3.9.1:1e5d33e, Dec  7 2020, 17:08:21) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
