--- a/Notebooks/pyfolio/pyfolio_min_data.ipynb
+++ b/Notebooks/pyfolio/pyfolio_min_data.ipynb
@@ -4371,7 +4371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 ('intrade')",
    "language": "python",
    "name": "python3"
   },
@@ -4385,12 +4385,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1 (tags/v3.9.1:1e5d33e, Dec  7 2020, 17:08:21) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3dc9f6b612ce1bd7e251dc8e464ec763c6eedce18e2ab29ad4d5814d5ff1b72c"
+    "hash": "4f9efcd63b349acaed8a8c685f7ed60827aaf1034e0a547a53b021141a66914b"
    }
   }
  },
