--- a/Notebooks/Jeevan/FNO/Equity Option Implied Volatility Analytics with Python.ipynb
+++ b/Notebooks/Jeevan/FNO/Equity Option Implied Volatility Analytics with Python.ipynb
@@ -369,8 +369,8 @@
     }
    ],
    "source": [
-    "print 'Black-Scholes call value %0.2f' % black_scholes_call_value(S, K, r, t, vol)\n",
-    "print 'Black-Scholes put value %0.2f' % black_scholes_put_value(S, K, r, t, vol)"
+    "print('Black-Scholes call value %0.2f' % black_scholes_call_value(S, K, r, t, vol))\n",
+    "print('Black-Scholes put value %0.2f' % black_scholes_put_value(S, K, r, t, vol))"
    ]
   },
   {
@@ -667,14 +667,14 @@
    ],
    "source": [
     "# print each of the results\n",
-    "print 'Black-Scholes call delta %0.4f' % call_delta(S, K, r, t, vol)\n",
-    "print 'Black-Scholes put delta %0.4f' % put_delta(S, K, r, t, vol)\n",
-    "print 'Black-Scholes gamma %0.4f' % gamma(S, K, r, t, vol)\n",
-    "print 'Black-Scholes vega %0.4f' % vega(S, K, r, t, vol)\n",
-    "print 'Black-Scholes call theta %0.4f' % call_theta(S, K, r, t, vol)\n",
-    "print 'Black-Scholes put theta %0.4f' % put_theta(S, K, r, t, vol)\n",
-    "print 'Black-Scholes call rho %0.4f' % call_rho(S, K, r, t, vol)\n",
-    "print 'Black-Scholes put rho %0.4f' % put_rho(S, K, r, t, vol)"
+    "print('Black-Scholes call delta %0.4f' % call_delta(S, K, r, t, vol))\n",
+    "print('Black-Scholes put delta %0.4f' % put_delta(S, K, r, t, vol))\n",
+    "print('Black-Scholes gamma %0.4f' % gamma(S, K, r, t, vol))\n",
+    "print('Black-Scholes vega %0.4f' % vega(S, K, r, t, vol))\n",
+    "print('Black-Scholes call theta %0.4f' % call_theta(S, K, r, t, vol))\n",
+    "print('Black-Scholes put theta %0.4f' % put_theta(S, K, r, t, vol))\n",
+    "print('Black-Scholes call rho %0.4f' % call_rho(S, K, r, t, vol))\n",
+    "print('Black-Scholes put rho %0.4f' % put_rho(S, K, r, t, vol))"
    ]
   },
   {
@@ -815,10 +815,10 @@
    "source": [
     "# get the call and put values to test the implied volatility output\n",
     "call_model_price = black_scholes_call_value(S, K, r, t, vol)\n",
-    "print 'Call implied volatility if market and model were equal (should be close to 0.25) %0.6f' % call_implied_volatility(S, K, r, t, call_model_price)\n",
+    "print('Call implied volatility if market and model were equal (should be close to 0.25) %0.6f' % call_implied_volatility(S, K, r, t, call_model_price))\n",
     "\n",
     "put_model_price = black_scholes_put_value(S, K, r, t, vol)\n",
-    "print 'Put implied volatility if market and model were equal (should be close to 0.25) %0.6f' % put_implied_volatility(S, K, r, t, put_model_price)"
+    "print('Put implied volatility if market and model were equal (should be close to 0.25) %0.6f' % put_implied_volatility(S, K, r, t, put_model_price))"
    ]
   },
   {
