Monte Carlo Simulation for all strategy

--- a/Notebooks/Nifty strategies/Breakout Strategy/ORB.ipynb
+++ b/Notebooks/Nifty strategies/Breakout Strategy/ORB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import datetime\n",
     "import quantstats\n",
     "import backtrader.indicators as btind\n",
-    "import quantstats as qs"
+    "import quantstats as qs\n",
+    "import numpy as np"
    ]
   },
   {
@@ -262,13 +263,6 @@
     "\n",
     "    pf.plotting.plot_rolling_returns(returns)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
