--- a/src/data_cleaning/Nifty/nifty_analytics.ipynb
+++ b/src/data_cleaning/Nifty/nifty_analytics.ipynb
@@ -579,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('intrade')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -593,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
@@ -602,5 +602,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
