saving shareholding table

--- a/Notebooks/Fundamentals/get_fundamentals_data.ipynb
+++ b/Notebooks/Fundamentals/get_fundamentals_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +53,11 @@
       "text/plain": [
        "{'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
        " 'user-agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',\n",
-       " 'cookie': 'csrftoken=HCi6WT2xJYSNgA2jjJhVQ54RYlXtIhfa',\n",
+       " 'cookie': 'csrftoken=CexY9eqPcgb5DCwn6Yys5cz1IHWSZZcz',\n",
        " 'content-type': 'application/x-www-form-urlencoded'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='6XxMDOwmE6UlI9U3v22C5JS5C8EU5rJB', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724334002, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
+       "<RequestsCookieJar[Cookie(version=0, name='csrftoken', value='iJ6MvlweipmSxzRA9mtR1PJk4TgJVgw5', port=None, port_specified=False, domain='www.screener.in', domain_specified=False, domain_initial_dot=False, path='/', path_specified=True, secure=True, expires=1724334958, discard=False, comment=None, comment_url=None, rest={'SameSite': 'Lax'}, rfc2109=False)]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,10 @@
     "        soup = BeautifulSoup(page)\n",
     "        # print(soup)\n",
     "        scrip_data = extract_scrip_ratios(soup,'company-ratios', 'top-ratios')\n",
-    "        table_df = extract_table_by_class(soup, section_id, 'data-table responsive-text-nowrap')\n",
+    "        try:\n",
+    "            table_df = extract_table_by_class(soup, section_id, 'data-table responsive-text-nowrap')\n",
+    "        except:\n",
+    "            table_df = extract_table_by_class(soup, section_id, 'data-table')\n",
     "    except:\n",
     "        print(f'EXCEPTION THROWN: UNABLE TO FETCH DATA')\n",
     "\n",
@@ -894,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +968,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SYMBOL: INFY\n",
+      "Data saved to Fundamental_data/INFY_shareholding.csv\n",
+      "\n",
+      "SYMBOL: HCLTECH\n",
+      "Data saved to Fundamental_data/HCLTECH_shareholding.csv\n",
+      "\n",
+      "SYMBOL: LTIM\n",
+      "Data saved to Fundamental_data/LTIM_shareholding.csv\n",
+      "\n",
+      "SYMBOL: TCS\n",
+      "Data saved to Fundamental_data/TCS_shareholding.csv\n",
+      "\n",
+      "SYMBOL: LTTS\n",
+      "Data saved to Fundamental_data/LTTS_shareholding.csv\n",
+      "\n",
+      "SYMBOL: WIPRO\n",
+      "Data saved to Fundamental_data/WIPRO_shareholding.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for scrip in SCRIPS:\n",
+    "    print(f\"\\nSYMBOL: {scrip}\")\n",
+    "    scrip_data, df = fetch_scrip_data(scrip, 'shareholding')\n",
+    "    if df is not None:\n",
+    "        # Remove '\\n' and strip leading/trailing spaces from column names\n",
+    "        df.columns = df.columns.str.replace('\\n', ' ').str.strip()\n",
+    "        file_name = f\"Fundamental_data/{scrip}_shareholding.csv\"\n",
+    "        df.to_csv(file_name, index=False)\n",
+    "        print(f\"Data saved to {file_name}\")\n",
+    "    else:\n",
+    "        print(f\"No data available for {scrip} - shareholding\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,6 +1032,23 @@
     "        print(f'EXCEPTION THROWN: UNABLE TO FETCH DATA')\n",
     "\n",
     "    return table_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EXCEPTION THROWN: UNABLE TO FETCH DATA\n"
+     ]
+    }
+   ],
+   "source": [
+    "test('TCS')"
    ]
   },
   {
@@ -1011,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4,
   "vscode": {
